--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -1,18 +1,19 @@
 ---
 interface Props {
-	title: string;
-	description: string;
-	image?: string;
-	canonicalURL?: string;
+  title: string;
+  description: string;
+  image?: string;
+  canonicalURL?: string;
+  keywords: string;
 }
 
-const { title, description, canonicalURL = "", image } = Astro.props;
+const { title, description, canonicalURL = "", image, keywords } = Astro.props;
 ---
 
 <style>
-	@view-transition {
-		navigation: auto; /* enabled! */
-	}
+  @view-transition {
+    navigation: auto; /* enabled! */
+  }
 </style>
 
 <!-- Global Metadata -->
@@ -28,6 +29,7 @@ const { title, description, canonicalURL = "", image } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="keywords" content={keywords} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
