--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,26 +6,32 @@ import Footer from "@/components/shared/Footer.astro";
 // Supports weights 100-900
 import "@fontsource-variable/urbanist";
 interface Props {
-	title: string;
-	description: string;
-	image?: string;
+  title: string;
+  description: string;
+  image?: string;
+  keywords: string;
 }
 
-const { title, description, image } = Astro.props;
+const { title, description, image, keywords } = Astro.props;
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
 <!doctype html>
 <html lang="es-CL">
-	<head>
-		<GoogleAnalytics />
-		<BaseHead title={title} description={description} image={image} />
-	</head>
-	<body>
-		<Header />
-		<main>
-			<slot />
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <GoogleAnalytics />
+    <BaseHead
+      keywords={keywords}
+      title={title}
+      description={description}
+      image={image}
+    />
+  </head>
+  <body>
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </body>
 </html>
