Price USD size updated

--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -141,7 +141,8 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
       border-bottom: 1px solid #ffffff2c;
     }
     &-price:nth-child(2) {
-      font-size: 1rem;
+      font-size: 1.3rem;
+      font-weight: 600;
     }
     .CLP {
       font-weight: 400;
