Main font changed to Fightree

--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -1,4 +1,7 @@
 ---
+// Supports weights 300-900
+import "@fontsource-variable/figtree";
+
 interface Props {
   title: string;
   description: string;
