--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,22 +4,25 @@ import WhatsAppLg from "@/components/social-icons/WhatsAppLg.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
-<Layout image="/public/MainSiteImage.jpg"
-	title="Contáctame"
-	description="Mis datos de contacto oficiales y siempre actualizados">
-	<TitlePage
-		title="Contáctame"
-		description="Mis datos de contacto oficiales y siempre actualizados"
-	/>
-	<div class="Container">
-		<article class="Article">
-			<p>
-				Escríbeme directamente a mi número de WhatsApp, y encuéntrame y sígueme
-				en mis Redes Sociales. Solo da click en cualquier ícono de abajo:
-			</p>
+<Layout
+  image="/public/MainSiteImage.jpg"
+  title="Contáctame"
+  description="Mis datos de contacto oficiales y siempre actualizados"
+  keywords="Contáctame, comprar quenas, quena profesional, quena de bambú, quena de ébano"
+>
+  <TitlePage
+    title="Contáctame"
+    description="Mis datos de contacto oficiales y siempre actualizados"
+  />
+  <div class="Container">
+    <article class="Article">
+      <p>
+        Escríbeme directamente a mi número de WhatsApp, y encuéntrame y sígueme
+        en mis Redes Sociales. Solo da click en cualquier ícono de abajo:
+      </p>
 
-			<p>Contáctame directo vía WhatsApp:</p>
-			<a href="https://wa.me/946342437"><WhatsAppLg /></a>
-		</article>
-	</div>
+      <p>Contáctame directo vía WhatsApp:</p>
+      <a href="https://wa.me/946342437"><WhatsAppLg /></a>
+    </article>
+  </div>
 </Layout>
