no clp no usd tags

--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -40,13 +40,13 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
 
     <div class="Offering-Pricebox">
       <div class="Offering-price">
-        <span class="CLP">CLP $</span>
+        <span class="CLP">CLP</span>
         {formattedPriceCLP}
         <span class="CLP">(peso chileno)</span>
       </div>
 
       <div class="Offering-price">
-        <span class="CLP">USD $</span>
+        <span class="CLP">USD</span>
         {formattedTotalUSD}
         <span class="CLP">(dólar americano)</span>
       </div>
