--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -4,9 +4,10 @@ interface Props {
 	description: string;
 	image?: string;
 	canonicalURL?: string;
+	keywords: string;
 }
 
-const { title, description, canonicalURL = "", image } = Astro.props;
+const { title, description, keywords, canonicalURL = "", image } = Astro.props;
 ---
 
 <style>
@@ -28,6 +29,7 @@ const { title, description, canonicalURL = "", image } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="keywords" content={keywords} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
