--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -3,7 +3,6 @@ import "@/styles/global.scss";
 import BaseHead from "@/components/shared/BaseHead.astro";
 import Header from "@/components/shared/Header.astro";
 import Footer from "@/components/shared/Footer.astro";
-import "@fontsource-variable/urbanist";
 const { title, description, frontmatter } = Astro.props;
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
@@ -12,7 +11,11 @@ import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 <html lang="es-CL">
 	<head>
 		<GoogleAnalytics />
-		<BaseHead title={frontmatter?.title ?? title} description={description} />
+		<BaseHead
+			keywords={frontmatter.keywords}
+			title={frontmatter?.title ?? title}
+			description={description}
+		/>
 		<style is:global lang="scss">
 			.Post-full img {
 				width: 100%;
