CAnonical URL fixed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,32 +5,34 @@ import Header from "@/components/shared/Header.astro";
 import Footer from "@/components/shared/Footer.astro";
 
 interface Props {
-  title: string;
-  description: string;
-  image?: string;
-  keywords: string;
+	title: string;
+	description: string;
+	image?: string;
+	keywords: string;
+	canonicalURL: string;
 }
 
-const { title, description, image, keywords } = Astro.props;
+const { title, description, image, keywords, canonicalURL } = Astro.props;
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
 <!doctype html>
 <html lang="es-CL">
-  <head>
-    <GoogleAnalytics />
-    <BaseHead
-      keywords={keywords}
-      title={title}
-      description={description}
-      image={image}
-    />
-  </head>
-  <body>
-    <Header />
-    <main>
-      <slot />
-    </main>
-    <Footer />
-  </body>
+	<head>
+		<GoogleAnalytics />
+		<BaseHead
+			canonicalURL={canonicalURL}
+			keywords={keywords}
+			title={title}
+			description={description}
+			image={image}
+		/>
+	</head>
+	<body>
+		<Header />
+		<main>
+			<slot />
+		</main>
+		<Footer />
+	</body>
 </html>
