--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,7 @@ import SectionPage from "@/components/SectionPage.astro";
 ---
 
 <Layout
+canonicalURL="about"
   image="/public/MainSiteImage.jpg"
   title="Acerca de mí - Quenas profesionales"
   description="Domingo Uribe Luthier. Especialista en fabricación de quenas de alto nivel para profesionales y público en general."
