--- a/src/pages/catalog/index.astro
+++ b/src/pages/catalog/index.astro
@@ -7,16 +7,16 @@ import TitlePage from "@/components/TitlePage.astro";
 ---
 
 <Layout
-  title="Catálogo"
-  description="Este es mi Catálogo de quenas profesionales en bambú, ébano y maderas de lujo"
-  image="/MainSiteImage.jpg"
-  keywords="Quenas profesionales, quena, quena de bambú, quena de ébano, quena de cocobolo"
->
-  <TitlePage
-    title="Catálogo"
-    description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
-  />
-  <OfferingContainer>
-    {offerings.map((item) => <Offering {...item} />)}
-  </OfferingContainer>
+	canonicalURL="catalog"
+	title="Catálogo"
+	description="Este es mi Catálogo de quenas profesionales en bambú, ébano y maderas de lujo"
+	image="/MainSiteImage.jpg"
+	keywords="Quenas profesionales, quena, quena de bambú, quena de ébano, quena de cocobolo">
+	<TitlePage
+		title="Catálogo"
+		description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
+	/>
+	<OfferingContainer>
+		{offerings.map((item) => <Offering {...item} />)}
+	</OfferingContainer>
 </Layout>
