--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import offerings from "../data/dataQuenas";
 ---
 
 <Layout
+canonicalURL=""
   title="La Ruta de la Quena - Quenas profesionales de Domingo Uribe"
   description="Luthier especializado en la fabricación de quenas profesionales de bambú, ébano y otras maderas de lujo. Vendo directamente. Envío a todo el mundo."
   keywords="Quena, quenas profesionales, quena de bambú, quena de ébano"
