--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -6,7 +6,7 @@ interface Props {
 	title: string;
 	description: string;
 	image?: string;
-	canonicalURL?: string;
+	canonicalURL: string;
 	keywords: string;
 }
 
