--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -3,7 +3,7 @@ import "@/styles/global.scss";
 import BaseHead from "@/components/shared/BaseHead.astro";
 import Header from "@/components/shared/Header.astro";
 import Footer from "@/components/shared/Footer.astro";
-const { title, description, frontmatter } = Astro.props;
+const { title, description, frontmatter, canonicalURL } = Astro.props;
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
@@ -12,6 +12,7 @@ import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 	<head>
 		<GoogleAnalytics />
 		<BaseHead
+			canonicalURL={canonicalURL}
 			keywords={frontmatter.keywords}
 			title={frontmatter?.title ?? title}
 			description={description}
