--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,11 +5,10 @@ import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout
-	canonicalURL="contact"
 	image="/public/MainSiteImage.jpg"
 	title="Contáctame"
 	description="Mis datos de contacto oficiales y siempre actualizados"
-	keywords="Contáctame, comprar quenas, quena profesional, quena de bambú, quena de ébano">
+	image="/MainSiteImage.jpg">
 	<TitlePage
 		title="Contáctame"
 		description="Mis datos de contacto oficiales y siempre actualizados"
