--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -1,9 +1,8 @@
 ---
-import "@/styles/global.scss";
 import BaseHead from "@/components/shared/BaseHead.astro";
 import Header from "@/components/shared/Header.astro";
 import Footer from "@/components/shared/Footer.astro";
-const { title, description, frontmatter, canonicalURL } = Astro.props;
+const { title, description, frontmatter, image } = Astro.props;
 import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
@@ -12,10 +11,9 @@ import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 	<head>
 		<GoogleAnalytics />
 		<BaseHead
-			canonicalURL={canonicalURL}
-			keywords={frontmatter.keywords}
 			title={frontmatter?.title ?? title}
 			description={description}
+			image={image}
 		/>
 		<style is:global lang="scss">
 			.Post-full img {
