--- a/src/components/shared/NavBar.astro
+++ b/src/components/shared/NavBar.astro
@@ -24,10 +24,10 @@ const { navItems } = data;
 		flex-flow: row nowrap;
 		gap: 1em;
 
-		@media screen and (max-width: 768px) {
+		@media screen and (max-width: 840px) {
 			position: absolute;
 			top: 60px;
-			background-color: rgba(30, 5, 58, 0.952);
+			background-color: rgb(30, 5, 58);
 			width: 55vw;
 			right: 2em;
 			display: flex;
@@ -37,8 +37,7 @@ const { navItems } = data;
 			transition: all 0.3s ease;
 			height: 0vh;
 			overflow: hidden;
-			// pointer-events: none;
-			box-shadow: 1px 10px 15px #ffffff59;
+			box-shadow: 3px 3px 12px #ffffff25;
 
 			.Header-link {
 				color: #fff;
@@ -46,6 +45,14 @@ const { navItems } = data;
 
 			&.isActive {
 				height: 55vh;
+			}
+		}
+
+		@media screen and (max-width: 840px) {
+			top: 46px;
+
+			&.isActive {
+				height: 35vh;
 			}
 		}
 	}
