--- a/src/pages/catalog/index.astro
+++ b/src/pages/catalog/index.astro
@@ -8,11 +8,11 @@ import TitlePage from "@/components/TitlePage.astro";
 
 <Layout
 	title="Catálogo"
-	description="Este es mi Catálogo de quenas profesionales en bambú, ébano y maderas de lujo"
+	description="Este es mi Catálogo de quenas profesionales en bambú, ébano y maderas de lujo."
 	image="/MainSiteImage.jpg">
 	<TitlePage
 		title="Catálogo"
-		description="Este es mi Catálogo de instrumentos musicales. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
+		description="Este es mi Catálogo de quenas profesionales en bambú, ébano y maderas de lujo. En cada tarjeta podrás ver su precio en peso chileno y en dólar americano, un video demostrativo desde mi Canal de YouTube y contactarme para comprar"
 	/>
 	<OfferingContainer>
 		{offerings.map((item) => <Offering {...item} />)}
