About feature image updated

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import SectionPage from "@/components/SectionPage.astro";
 ---
 
 <Layout
-	image="/public/MainSiteImage.jpg"
+	image="@/assets/images/aboutMe-transformed.jpeg"
 	title="Acerca de mí - Quenas profesionales"
 	description="Domingo Uribe Luthier. Especialista en fabricación de quenas de alto nivel para profesionales y público en general.">
 	<SectionPage title="Acerca de mí">
