h2 on about centered

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -334,6 +334,10 @@ import SectionPage from "@/components/SectionPage.astro";
 		margin: auto;
 	}
 
+	.Page h2 {
+		text-align: center;
+	}
+
 	@media screen and (max-width: 440px) {
 		.Article p {
 			width: 100%;
