--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -332,6 +332,7 @@ import SectionPage from "@/components/SectionPage.astro";
 	.Article p {
 		width: 70%;
 		margin: auto;
+		margin-bottom: 2rem;
 	}
 
 	.Page h2 {
