--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -28,6 +28,15 @@ import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 		</style>
 	</head>
 	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-WF2J4JBC"
+				height="0"
+				width="0"
+				style="display:none;visibility:hidden"></iframe></noscript
+		>
+		<!-- End Google Tag Manager (noscript) -->
 		<Header />
 		<main>
 			<div class="Container">
