--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -17,6 +17,10 @@ const { title, description, canonicalURL = "", image } = Astro.props;
 	}
 </style>
 
+<script>
+	import "@/scripts/gtm";
+</script>
+
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
