New blog post upload

--- a/src/components/shared/Button.astro
+++ b/src/components/shared/Button.astro
@@ -54,8 +54,9 @@ const { link, buttonText, classes, target = "_self" } = Astro.props;
 	}
 
 	.Button-lg {
-		padding: 1em;
+		padding: 1em 2rem;
 		font-size: 1.1rem;
+		border: 4px solid var(--uiBrown);
 	}
 
 	.Button-center {
