--- a/src/components/Offering.astro
+++ b/src/components/Offering.astro
@@ -7,7 +7,7 @@ import Disclaimer from "./shared/Disclaimer.astro";
 import Button from "./shared/Button.astro";
 import { getFormattedPrices } from "@/scripts/utils";
 
-const { image, alt, title, description, priceCLP, id, youtubeLink } =
+const { image, alt, title, description, priceCLP, id } =
   Astro.props;
 
 const images = import.meta.glob<{ default: ImageMetadata }>(
@@ -53,14 +53,9 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
     </div>
     <div class="Offering-buttons">
       <Button
-        link={youtubeLink}
-        buttonText="Mírala en YouTube"
-        classes="Button Button-primary Button-sm"
-      />
-      <Button
         link={"/contact"}
         buttonText="Contáctame"
-        classes="Button Button-sm"
+        classes="Button Button-lg"
       />
     </div>
   </div>
@@ -109,14 +104,14 @@ const { formattedPriceCLP, formattedTotalUSD } = getFormattedPrices(priceCLP);
     }
     &-title {
       margin: 0;
-      font-size: 1.1rem;
+      font-size: 1.5rem;
       font-weight: bolder;
     }
     &-description {
       margin: 0;
     }
     &-Pricebox {
-      background-color: rgba(255, 255, 255, 0.137);
+   
       padding: 0 0.5em;
       border-radius: var(--radio-md);
       font-size: 20px;
